--- a/index.html
+++ b/index.html
@@ -8,22 +8,16 @@
 	</head>
 	<body>
 		<div class="container">
-
 			<div class="row">
 				<div class="col-xs-3 col-md-3"><p id="list"></p></div>
-				<div class="col-xs-6 col-md-6"><p id="selectedCat"></p></div>
+				<div class="col-xs-6 col-md-6">
+					<div id="selectedCat">
+						<p id="name"></p>
+						<img src="">
+						<p id="count"></p>
+					</div>
+				</div>
 			</div>
-
-			<!-- <div class="row">
-				<div class="col-xs-6 col-md-6"><img id="kitty" src="img/cat.jpg"/></div>
-				<div class="col-xs-6 col-md-6"><img id="kitty2"src="img/cat2.jpg"/></div>
-			</div>
-
-			<div class="row">
-				<div class="col-xs-6 col-md-6"><h3 id="count">You have clicked me 0 times</h3></div>
-				<div class="col-xs-6 col-md-6"><h3 id="count2">You have clicked me 0 times</h3></div>
-			</div> -->
-
 		</div>
 
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
